--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -134,6 +134,12 @@
                         <option value="#87CEFA" style="background-color: #87CEFA;">중요</option>
                         <option value="#8080FF" style="background-color: #8080FF;">기타</option>
                     </select> <input type="hidden" id="eventColor" value="#F08080">
+                    
+					<label for="petSelect">반려동물 선택:</label>
+					<select id="petSelect">
+					    <option value="">반려동물 없음</option>
+					</select>
+
                     <!-- 버튼을 같은 줄에 배치 -->
                     <div class="button-container">
                         <button id="addEventButton">일정등록</button>
