--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -139,7 +139,10 @@
 						<option value="#98FB98" style="background-color: #98FB98;">유치원</option>
 						<option value="#87CEFA" style="background-color: #87CEFA;">중요</option>
 						<option value="#8080FF" style="background-color: #8080FF;">기타</option>
-					</select> <input type="hidden" id="eventColor" value="#F08080"> <label
+					</select>
+					
+					<!-- 반려동물 -->
+					<input type="hidden" id="eventColor" value="#F08080"> <label
 						for="petSelect">반려동물 선택:</label> <select id="petSelect">
 						<option value="">반려동물 없음</option>
 					</select>
