--- a/src/main/resources/static/calendar/css/event-list.css
+++ b/src/main/resources/static/calendar/css/event-list.css
@@ -1,5 +1,5 @@
 .all-events-container {
-    position: absolute;
+    position: fixed;
     right: 20px;
     top: 320px;
     width: 210px; /* 너비 줄이기 */
