--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -9,6 +9,8 @@
 	src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.14/index.global.min.js"></script>
 <script
 	src="https://cdn.jsdelivr.net/npm/@fullcalendar/google-calendar@6.1.14/index.global.min.js"></script>
+	
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <!-- 외부 CSS 파일 및 Font Awesome 추가 -->
 <link rel="stylesheet" href="/calendar/css/style.css">
