게시판 첨부파일 다운로드 기능 수정 완료

--- a/src/main/resources/templates/board/boardRead.html
+++ b/src/main/resources/templates/board/boardRead.html
@@ -88,7 +88,7 @@
     <!-- 첨부파일 -->
     <span th:if="${file}">
         <i class="fas fa-paperclip"></i>
-        <a th:href="@{/board/board/download/{id}(id=${file.attachedFileId})}" th:text="${file.original_filename}" class="file-link">첨부파일</a>
+        <a th:href="@{/board/download/{id}(id=${file.attachedFileId})}" th:text="${file.original_filename}" class="file-link">첨부파일</a>
     </span>
 </div>
         
