--- a/src/main/resources/static/log.css
+++ b/src/main/resources/static/log.css
@@ -245,16 +245,17 @@ body {
 
 /* 일기 쓰기 팝업창 */
 #logPopupContainer {
-  display: none; /* 기본적으로 보이지 않음 */
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* 반투명 배경 */
+  background-color: rgba(0, 0, 0, 0.4); /* 더 부드러운 배경 */
+  display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000; /* 팝업이 게시글 위에 나타나도록 설정 */
+  z-index: 1000;
 }
 
 .popup {
@@ -327,13 +328,14 @@ form#uploadForm {
 .logPost {
   display: flex;
   flex-direction: column;
-  border: 1px solid #ccc;
-  border-radius: 5px; /* 각 게시물 모서리 둥글게 */
-  margin-bottom: 15px; /* 게시물 간 간격 추가 */
-  padding: 10px 10PX 0 10PX;
+  border: 1px solid #ddd;
+  border-radius: 12px; /* 모서리 둥글게 */
+  margin-bottom: 20px; /* 게시물 간 여백 */
+  padding: 10px 15px 0;
   background-color: #fff;
-  position: relative; /* 이미지 배치를 위한 상대 위치 */
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* 카드형 스타일 */
 }
+
 
 /* 헤더 스타일 */
 .logPostHeader {
@@ -359,7 +361,7 @@ form#uploadForm {
 }
 
 .logPostTime {
-  font-size: 12px;
+  font-size: 14px;
   color: #aaa;
 }
 
@@ -673,10 +675,5 @@ form#uploadForm {
   background-color: #4caf50; /* 녹색 */
 }
        
-        
-        
-        
-        
-        
-        
+   
         
