상단바 -> 알람 위치 css랑 각자 페이지에서 장소추천 눌렸을 때, 가져올 정보 코드 완료 (피드제외)

--- a/src/main/resources/static/calendar/css/style.css
+++ b/src/main/resources/static/calendar/css/style.css
@@ -185,3 +185,16 @@ body {
   margin-bottom: 20px;
   color: #333;
 }
+
+/*알람 아이콘*/
+.navbar-icons {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+/*사이 회색 선*/
+.divider {
+  width: 1px;
+  height: 30px;
+  background-color: #ddd;
+}
