--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -42,7 +42,7 @@
                         <li><a href="/calendar">홈</a></li>
                         <li><a href="/log/indexLog">피드</a></li>
                         <li><a href="/board/list">게시판</a></li>
-                        <li><a href="#contact">장소추천</a></li>
+                        <li><a href="/location/locationList">장소추천</a></li>
                     </ul>
                     <div class="navbar-icons">
                         <div class="icon-group">
