--- a/src/main/resources/templates/board/boardRead.html
+++ b/src/main/resources/templates/board/boardRead.html
@@ -43,7 +43,7 @@
                         <li><a href="/calendar">홈</a></li>
                         <li><a href="#services">피드</a></li>
                         <li><a href="/board/list">게시판</a></li>
-                        <li><a href="#contact">장소추천</a></li>
+                        <li><a href="/location/locationList">장소추천</a></li>
                     </ul>
                     <div class="navbar-icons">
                         <div class="icon-group">
