--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -39,8 +39,8 @@
 				<div class="navbar-container">
 					<a href="#" class="navbar-logo">もふもふ</a>
 					<ul class="navbar-menu">
-						<li><a href="#home">홈</a></li>
-						<li><a href="#services">피드</a></li>
+						<li><a href="/calendar">홈</a></li>
+						<li><a href="/log/indexLog">피드</a></li>
 						<li><a href="/board/list">게시판</a></li>
 						<li><a href="/location/locationList">장소추천</a></li>
 					</ul>
