--- a/src/main/resources/templates/location/locationList.html
+++ b/src/main/resources/templates/location/locationList.html
@@ -29,7 +29,7 @@
                     <a href="#" class="navbar-logo">もふもふ</a>
                     <ul class="navbar-menu">
                         <li><a href="/calendar">홈</a></li>
-                        <li><a href="#services">피드</a></li>
+                        <li><a href="/log/indexLog">피드</a></li>
                         <li><a href="/board/list">게시판</a></li>
                         <li><a href="/location/locationList">장소추천</a></li>
                     </ul>
