--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -149,9 +149,7 @@
           </div>
             </th:block>
           <p>
-          <div class="center">
-            <input type="button" onclick="location.href='/board/write'" value="글쓰기">
-          </div>
+            <input type="button" class= "Write-button" onclick="location.href='/board/write'" value="글쓰기">
         </div>
         
       </div>
