--- a/src/main/resources/templates/board/boardWrite.html
+++ b/src/main/resources/templates/board/boardWrite.html
@@ -87,8 +87,11 @@
                   </td>
                 </tr>
               </table>
-              <button type="submit" class="submit-button">Post</button>
-              <input type="button" onclick="location.href='/board/list'" value="취소">
+              <div class="button-container">
+    <button type="submit" class="submit-button">등록</button>
+    <button type="button" class="cancel-button" onclick="location.href='/board/list'">취소</button>
+</div>
+
             </form>
           </div>
         </section>
