--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -13,8 +13,8 @@
 </head>
 <body>
   <nav class="sidebar">
-    <h1 class="profile-title">반려견 프로필</h1>
-
+    <h1 class="profile-title">もふもふ</h1>
+	 <p class="profile-subtext">소중한 반려동물을 프로필에 추가하세요✨</p>
     <div class="profile-list-wrapper">
         <div id="profile-list">
             <div id="profile-container"></div>
@@ -25,6 +25,7 @@
     <div class="add-profile">
         <button id="add-button">+</button>
     </div>
+</nav>
 
     <!-- 프로필 추가 팝업 -->
     <div id="popup" style="display: none;">
@@ -44,7 +45,7 @@
             <input type="number" id="age">
             <label for="birthdate">생일:</label>
             <input type="date" id="birthdate">
-            <button id="save-button">저장</button>
+            <button class="save-btn" id="save-button">저장</button>
         </div>
     </div>
 
@@ -58,7 +59,6 @@
             </div>
         </div>
     </div>
-</nav>
 
 
 <script src="/assets/js/profile.js"></script>
