--- a/src/main/resources/static/location/css/location-read.css
+++ b/src/main/resources/static/location/css/location-read.css
@@ -14,7 +14,7 @@
 }
 .reviewbutton {
 	font-size: 13px;
-	background-color: #007bff;
+	background-color: 	#FFD1DC;
 	color: white;
 	border: none;
 	border-radius: 5px;
@@ -33,7 +33,7 @@
     transform: scale(1.05);
 }
 .reviewsearch{
-	background-color: #007bff;
+	background-color: 	#FFD1DC;
 	color: white;
 	border:none;
 	border-radius: 5px;
@@ -48,10 +48,10 @@
          border: 1px solid #ddd;
          padding: 10px;
          border-radius: 5px;
-         background-color: #f9f9f9;
+         background-color: rgb(255, 255, 255);
          margin: 20px auto;
          max-width: 600px;
-         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+         box-shadow: 0 0 5px 	#FFD1DC;
 }
 .location-header {
     display: flex;
@@ -341,11 +341,12 @@
 /* 전체 페이지를 감싸는 하얀 배경 */
 .centered-container {
     display: flex;
-    justify-content: center;
+    
     align-items: center;
     min-height: 100vh; /* 화면 전체 높이 */
-    background-color: #f0f0f0; /* 페이지 배경색 (밝은 회색) */
-    padding: 20px;
+    background-color: #f8f9fc; /* 페이지 배경색 (밝은 회색) */
+    margin-top:20px;
+    
     box-sizing: border-box;
 }
 
@@ -353,11 +354,13 @@
 .white-background {
     background-color: #ffffff; /* 하얀 배경 */
     border-radius: 10px; /* 모서리를 둥글게 */
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* 부드러운 그림자 */
+    box-shadow:0 0 5px 	#FFD1DC;
     max-width: 1200px; /* 최대 너비 */
     width: 100%; /* 화면에 꽉 차도록 설정 */
     padding: 20px; /* 내부 여백 */
+
     box-sizing: border-box; /* 박스 크기 포함 */
+    margin-bottom:20px;
 }
 .visitor-photo-slider {
     width: 100%;
@@ -406,7 +409,7 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: #007bff;
+    background-color: 	#FFD1DC;
     color: white;
     display: flex;
     justify-content: center;
