--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -16,6 +16,8 @@
  <link rel="stylesheet" href="/calendar/css/style.css">
   <link rel="stylesheet" href="/assets/css/list.css">
   
+  <link href="https://fonts.googleapis.com/css2?family=Jua&family=Gowun+Dodum&family=Do+Hyeon&family=Nanum+Gothic&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+  
   <script>
   function search() {
 	    let searchText = document.getElementById("searchText").value;
@@ -37,7 +39,14 @@
       <!-- Navbar -->
             <nav class="navbar">
                 <div class="navbar-container">
-                    <a href="#" class="navbar-logo">もふもふ</a>
+                
+                    <!-- 2/7 -->
+					<div class="logo">
+						<a href="/calendar">
+	    					<img src="/images/logo2.jpg" alt="로고 이미지" class="logoimage" />
+	  					</a>
+					</div>
+					
                     <ul class="navbar-menu">
                         <li><a href="/calendar">홈</a></li>
                         <li><a href="/log/indexLog">피드</a></li>
