--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -24,6 +24,8 @@
 <link
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
 	rel="stylesheet">
+	
+<link href="https://fonts.googleapis.com/css2?family=Jua&family=Gowun+Dodum&family=Do+Hyeon&family=Nanum+Gothic&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 
 <title>もふもふ</title>
 </head>
@@ -37,7 +39,14 @@
 			<!-- Navbar -->
 			<nav class="navbar">
 				<div class="navbar-container">
-					<a href="#" class="navbar-logo">もふもふ</a>
+				
+					<!-- 2/7 -->
+					<div class="logo">
+						<a href="/calendar">
+	    					<img src="/images/logo2.jpg" alt="로고 이미지" class="logoimage" />
+	  					</a>
+					</div>
+					
 					<ul class="navbar-menu">
 						<li><a href="/calendar">홈</a></li>
 						<li><a href="/log/indexLog">피드</a></li>
