--- a/src/main/resources/templates/location/locationList.html
+++ b/src/main/resources/templates/location/locationList.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="/calendar/css/memo.css">
 <link rel="stylesheet" href="/calendar/css/notifications.css">
 <link rel="stylesheet" href="/location/css/location-list.css">
+<link href="https://fonts.googleapis.com/css2?family=Jua&family=Gowun+Dodum&family=Do+Hyeon&family=Nanum+Gothic&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 <title>장소 리스트</title>
 <!-- 카카오맵 API -->
 <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=278940b595d1bf12680c71409de85eda&libraries=services"></script>
@@ -26,7 +27,14 @@
             <!-- Navbar -->
             <nav class="navbar">
                 <div class="navbar-container">
-                    <a href="#" class="navbar-logo">もふもふ</a>
+                
+                    <!-- 2/7 -->
+					<div class="logo">
+						<a href="/calendar">
+	    					<img src="/images/logo2.jpg" alt="로고 이미지" class="logoimage" />
+	  					</a>
+					</div>
+					
                     <ul class="navbar-menu">
                         <li><a href="/calendar">홈</a></li>
                         <li><a href="/log/indexLog">피드</a></li>
@@ -205,7 +213,7 @@
 </div>
 </div>
 <div style="text-align: center; margin-top: 20px;">
-    <button id="loadMoreBtn" style="padding: 10px 20px; font-size: 16px; background-color: #007bff; color: white; border: none; border-radius: 5px; cursor: pointer;">더보기</button>
+    <button id="loadMoreBtn" style="padding: 10px 20px; font-size: 16px; background-color: 	#FFD1DC; color: white; border: none; border-radius: 5px; cursor: pointer;">더보기</button>
 </div>
 </div>
 </div>
