--- a/src/main/resources/templates/board/boardRead.html
+++ b/src/main/resources/templates/board/boardRead.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/assets/css/read.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Jua&family=Gowun+Dodum&family=Do+Hyeon&family=Nanum+Gothic&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 	<!-- jQuery 로드 -->
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	
@@ -37,7 +38,12 @@
       <!-- Navbar -->
             <nav class="navbar">
                 <div class="navbar-container">
-                    <a href="#" class="navbar-logo">もふもふ</a>
+                    <!-- 2/7 -->
+					<div class="logo">
+						<a href="/calendar">
+	    					<img src="/images/logo2.jpg" alt="로고 이미지" class="logoimage" />
+	  					</a>
+					</div>
                     <ul class="navbar-menu">
                         <li><a href="/calendar">홈</a></li>
                         <li><a href="/log/indexLog">피드</a></li>
