--- a/src/main/resources/templates/board/boardUpdate.html
+++ b/src/main/resources/templates/board/boardUpdate.html
@@ -18,6 +18,9 @@
 	<link rel="stylesheet" href="/calendar/css/notifications.css">
    <link rel="stylesheet" href="/calendar/css/style.css">
   <link rel="stylesheet" href="/assets/css/update.css">
+  
+  <link href="https://fonts.googleapis.com/css2?family=Jua&family=Gowun+Dodum&family=Do+Hyeon&family=Nanum+Gothic&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+  
 <script>
        function removeFile(){
     	   document.getElementById("fileRemoved").value = "true";
@@ -38,7 +41,14 @@
       <!-- Navbar -->
             <nav class="navbar">
                 <div class="navbar-container">
-                    <a href="#" class="navbar-logo">もふもふ</a>
+                
+                    <!-- 2/7 -->
+					<div class="logo">
+						<a href="/calendar">
+	    					<img src="/images/logo2.jpg" alt="로고 이미지" class="logoimage" />
+	  					</a>
+					</div>
+					
                     <ul class="navbar-menu">
                         <li><a href="/calendar">홈</a></li>
                         <li><a href="/log/indexLog">피드</a></li>
