--- a/src/main/resources/static/calendar/css/memo.css
+++ b/src/main/resources/static/calendar/css/memo.css
@@ -14,8 +14,8 @@
 
 #calendarSearch button {
     padding: 5px 10px;
-    background-color: #87CEFA;
-    color: #fff;
+    background-color:#FFD1DC;
+    color:white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -28,7 +28,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: #fff;
+    background:white;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
@@ -52,8 +52,9 @@
     margin-top: 10px;
     padding: 5px 10px;
     border: none;
-    background: #87CEFA;
-    color: #fff;
+    background: #FFD1DC;
+    color: white;
     border-radius: 5px;
     cursor: pointer;
+            box-shadow: 0 0 5px 	#FFD1DC;/*2/7*/
 }
