--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -76,15 +76,14 @@
 			</nav>
 
 
-			<div class="content">
 				<!-- 캘린더 영역 -->
 				<div id='calendar'></div>
 				<!-- D-day 표시 섹션 -->
 				<div class="d-day-container">
 					<div class="dday-buttons">
-						<button id="select-event-btn">+</button>
+						<button id="select-event-btn">이벤트</button>
 						D- DAY
-						<button id="custom-date-btn">*</button>
+						<button id="custom-date-btn">설정</button>
 					</div>
 					<div id="event-select-container" style="display: none;">
 						<select id="event-select">
@@ -123,10 +122,10 @@
 
 				<!-- 이벤트 추가 모달 -->
 				<div id="eventModal">
-					<h3>もふもふ</h3>
+					<h3 id="titlename">もふもふ</h3>
 					<label for="eventTitle">일정명:</label> <input type="text"
 						id="eventTitle" required> <label>시작일자 및 시작시간:
-						<button id="allDayButton">*</button>
+						<button id="allDayButton">하루종일</button>
 					</label>
 					<div class="time-container">
 						<input type="date" id="startDate" required> <input
@@ -179,7 +178,6 @@
 						<option value="#8080FF" style="background-color: #8080FF;">기타</option>
 					</select>
 				</div>
-			</div>
 		</div>
 	</div>
 	<script src="/calendar/js/calander.js"></script>
