--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -79,6 +79,7 @@
 				<!-- 캘린더 영역 -->
 				<div id='calendar'></div>
 				<!-- D-day 표시 섹션 -->
+								<div class="content">
 				<div class="d-day-container">
 					<div class="dday-buttons">
 						<button id="select-event-btn">이벤트</button>
@@ -119,7 +120,7 @@
 						<ul id="notification-list"></ul>
 					</div>
 				</div>
-
+			
 				<!-- 이벤트 추가 모달 -->
 				<div id="eventModal">
 					<h3 id="titlename">もふもふ</h3>
@@ -178,6 +179,7 @@
 						<option value="#8080FF" style="background-color: #8080FF;">기타</option>
 					</select>
 				</div>
+		</div>
 		</div>
 	</div>
 	<script src="/calendar/js/calander.js"></script>
